--- a/index.ipynb
+++ b/index.ipynb
@@ -51,20 +51,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
+   "execution_count": 2,
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [],
    "source": [
-    "# Define Driver class here"
+    "class Driver(object):\n",
+    "    \n",
+    "    def greeting(self):\n",
+    "        return \"Hey, how are you?\"\n",
+    "    \n",
+    "    def ask_for_destination(self):\n",
+    "        return \"Where would you like to go today?\""
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Define Passenger class here "
+    "class Passenger(object):\n",
+    "    def reply_greeting(self):\n",
+    "        return \"I am doing well! Thanks for picking me up today!\"\n",
+    "    \n",
+    "    def in_a_hurry(self):\n",
+    "        return \"Punch it! They're on our tail!\""
    ]
   },
   {
@@ -79,14 +92,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
-    "daniel = None # driver\n",
-    "meryl = None # driver\n",
-    "niky = None # passenger\n",
-    "terrance = None # passenger"
+    "daniel = Driver() # driver\n",
+    "meryl =  Driver()\n",
+    "niky = Passenger()\n",
+    "terrance = Passenger() #passenger"
    ]
   },
   {
@@ -98,21 +111,38 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Hey, how are you?\n"
+     ]
+    }
+   ],
    "source": [
-    "polite_greeting = None\n",
+    "polite_greeting = daniel.greeting()\n",
+    "    \n",
     "print(polite_greeting)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Punch it! They're on our tail!\n"
+     ]
+    }
+   ],
    "source": [
-    "no_time_to_talk = None\n",
+    "no_time_to_talk = niky.in_a_hurry()\n",
     "print(no_time_to_talk)"
    ]
   },
@@ -129,29 +159,40 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# create Lion class"
+    "# create Lion class\n",
+    "class Lion(object):\n",
+    "    def speak(self):\n",
+    "        return \"ROAR!\"\n",
+    "    "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# create Tiger class"
+    "# create Tiger class\n",
+    "class Tiger():\n",
+    "    def speak(self):\n",
+    "        return \"rawrrr\"\n",
+    "    "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# create Elephant class"
+    "# create Elephant class\n",
+    "class Elephant(object):\n",
+    "    def speak(self):\n",
+    "        return \"elephant noiseeee\""
    ]
   },
   {
@@ -163,13 +204,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<__main__.Lion object at 0x7f3ba4344b00>\n",
+      "<__main__.Tiger object at 0x7f3ba4344ac8>\n",
+      "<__main__.Elephant object at 0x7f3ba43446a0>\n"
+     ]
+    }
+   ],
    "source": [
-    "simba = None\n",
-    "tony = None\n",
-    "dumbo = None"
+    "simba = Lion()\n",
+    "tony = Tiger()\n",
+    "dumbo = Elephant()\n",
+    "print(simba)\n",
+    "print(tony)\n",
+    "print(dumbo)"
    ]
   },
   {
@@ -181,11 +235,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 17,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[<__main__.Lion object at 0x7f3ba4344b00>, <__main__.Tiger object at 0x7f3ba4344ac8>, <__main__.Elephant object at 0x7f3ba43446a0>]\n"
+     ]
+    }
+   ],
    "source": [
-    "zoo = None"
+    "zoo = []\n",
+    "zoo.append(simba)\n",
+    "zoo.append(tony)\n",
+    "zoo.append(dumbo)\n",
+    "print(zoo)"
    ]
   },
   {
@@ -197,10 +263,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 20,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "ROAR!\n",
+      "rawrrr\n",
+      "elephant noiseeee\n"
+     ]
+    }
+   ],
+   "source": [
+    "for animal in zoo:\n",
+    "    print (animal.speak())"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -227,7 +306,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.5"
+   "version": "3.6.6"
   }
  },
  "nbformat": 4,
